Auto-create release on tag push

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,6 +127,10 @@ jobs:
     - name: Upload release assets
       uses: softprops/action-gh-release@v1
       with:
+        tag_name: ${{ github.ref_name }}
+        name: ${{ github.ref_name }}
+        draft: false
+        prerelease: false
         files: |
           storyshort_linux_amd64/storyshort_linux_amd64.tar.gz
           storyshort_windows_amd64/storyshort_windows_amd64.zip
